<resources>
    <string name="app_name">Proximus</string>

    <string name="chats_title_label">Chats</string>
    <string name="friends_title_label">Friends</string>


    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint_label">Username</string>
    <string name="password_hint_label">Password</string>
    <string name="login_button_label">Login</string>
    <string name="signup_text_listner">Don\'t have an account? SignUp!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="email_hint_label">email@example.com</string>
    <string name="signup_button_label">SignUp</string>
    <string name="login_text_listner">Already have an account, Log in</string>
    <string name="logout_label">Logout</string>

    <string name="signup_error_title">Oops!</string>
    <string name="signup_error_message">Please make sure you enter a username,password and email address</string>


    <string name="login_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>


    <string name="inbox_empty_label">No new messages!</string>
    <string name="friends_empty_label">Add Friends to begin!</string>


    <string name="title_activity_manage_friends">Manage Friends</string>
    <string name="manage_friends_label">Manage Friends</string>


    <string name="error_title">We\'re sorry!</string>
    <string name="action_camera_label">Camera</string>

    <string name="take_photo_label">Take Photo</string>
    <string name="take_video_label">Take Video</string>
    <string name="choose_photo_label">Choose Photo</string>
    <string name="choose_video_label">Choose Video</string>

    <string name="media_storage_error_label">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="select_video_warning">Selected video must be less than 10 MB.</string>
    <string name="file_picked_error">There was a problem with selected file.</string>
    <string name="title_activity_recipients">Recipients</string>
    <string name="recipients_empty_label">Add some friends first!</string>
    <string name="select_video_error">File size too large!</string>
    <string name="action_send">Send</string>
    <string name="action_send_label">Send</string>
    <string name="file_selected_error">There was an error with file selected, Please select other file.</string>
    <string name="sent_success">Sent successful!</string>
    <string name="error_sending_try_again">There was an error sending your message. Please try again.</string>
    <string name="title_activity_image_view">Photo</string>
    <string name="app_name_title">Proximus</string>
    <string name="icon_image">icon image</string>
    <string name="cancel_label">Cancel</string>
    <string name="user_image_view">user</string>
    <string name="user_check_view">check</string>
    <string name="push_message">You have new message from %s!</string>

</resources>
