<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_manage_friends"
        android:orderInCategory="50"
        android:title="@string/manage_friends_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_action_camera"
        android:orderInCategory="10"
        android:title="@string/action_camera_label"
        app:showAsAction="always"/>
</menu>
